--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator QFE, RH & Titik Embun STAMAR TENAU</title>
+    <title>Kalkulator QFE, RH/Bola Basah, dan Titik Embun</title>
     <style>
         body {
             font-family: 'Times New Roman', serif;
@@ -318,3 +318,4 @@
     </script>
 </body>
 </html>
+
