--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </style>
 </head>
 <body>
-    <h2>Kalkulator QFE, RH & Titik Embun STAMAR TENAU</h2>
+    <h2>Kalkulator QFE, RH/Bola Basah, dan Titik Embun</h2>
 
     <label for="qff">QFF (hPa/mbar):</label>
     <input type="number" id="qff" placeholder="Contoh: 1012.8" step="0.1" required>
@@ -318,4 +318,5 @@
     </script>
 </body>
 </html>
+
 
